<resources>

    <string name="app_name">ReceiptKeeper</string>
    <string name="title_receipt_detail">Receipt Detail</string>
    <string name="title_receipt_list">Receipts</string>
    <string name="title_add_receipt">Add Receipt</string>
    <string name="title_edit_receipt">Edit Receipt</string>
    <string name="title_view_receipt">View Receipt</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="name">Name:</string>
    <string name="total_sum">Total sum</string>
    <string name="tax">Tax:</string>
    <string name="receipt_comment_">Receipt comment…</string>
    <string name="add_receipt">Add receipt</string>
    <string name="image_of_the_receipt">Image of the receipt</string>
    <string name="date_and_time">Date and time:</string>
    <string name="click_to_take_a_picture_of_the_receipt">Click to take a picture of the receipt</string>
    <string name="settings">Settings</string>
    <string name="storage_settings">Storage settings</string>
    <string name="receipt_settings">Receipt settings</string>
    <string name="account_settings">Account settings</string>
    <string name="location">Location</string>
    <string name="storage">Storage</string>
    <string name="account">Account</string>
    <string name="receipt">Receipt</string>
    <string name="local_storage">Local storage only</string>
    <string name="box_net_storage">Box.net storage</string>
    <string name="google_drive_storage">Google Drive storage</string>
    <string name="dropbox_storage">Local storage with dropbox backup</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="take_photo">Click icon to take photo</string>
    <string name="cancel_prompt_data_loss">Do you wish to cancel and go back to the home screen? (All data will be lost)</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sum">Sum:</string>
    <string name="search">Search</string>
    <string name="details">Details</string>
    <string name="search_hint">Search receipts</string>
    <string name="all">All</string>

    <string name="comment">Comment</string>
    <string name="cloud_storage">Cloud storage</string>
    <string name="last_receipt_to_be_added_">Last receipt to be added:</string>
    <string name="last_added_">"Last added: "</string>
    <string name="you_have_not_added_any_receipts_yet_">You have not added any receipts yet.</string>
    <string name="tag_receipttracker">ReceiptTracker</string>
    <string name="image_of_last_receipt">Image of last receipt</string>
    <string name="menu_search">Menu search</string>
    <string name="select_to_date">Select to date</string>
    <string name="select_from_date">Select from date</string>
    <string name="to">To:</string>
    <string name="from">From:</string>
    <string name="add_filter">Filter</string>
    <string name="receipts">Receipts</string>
    <string name="click_to_set_date">Click to set date</string>
    <string name="click_to_view_details">Click to view details</string>
    <string name="results">Results</string>
    
    <string name="immaterial_assets">Immaterial assets</string>
    <string name="buildings_and_property">Buildings and property</string>
    <string name="property_and_other_assets_non_taxrefund">Property and other assets non taxrefund</string>
    <string name="machines_and_inventory">Machines and inventory</string>
    <string name="other_property_assets">Other property assets</string>
    <string name="merchandise_store">Merchandise store</string>
    <string name="customer_billings">Customer billings</string>
    <string name="other_billings">Other billings</string>
    <string name="cash_and_bank">Cash and bank</string>
    <string name="own_capital">Own capital</string>
    <string name="expansion_fund">Expansion fund</string>
    <string name="replacement_fund">Replacement fund</string>
    <string name="forest_account">Forest account</string>
    <string name="periodisation_fund">Periodisation fund</string>
    <string name="lend_debt">Lend debt</string>
    <string name="supplier_debt">Supplier debt</string>
    <string name="tax_debt">Tax debt</string>
    <string name="other_debt">Other debt</string>
    <string name="sale_work_taxable_income">Sales, work and taxable income</string>
    <string name="non_taxable_income">Non-taxable income</string>
    <string name="car_and_house_privilige">Car and house privilige</string>
    <string name="merchandise_material_and_services">Merchandise material and services</string>
    <string name="other_external_costs">Other external costs</string>
    <string name="hired_staff">Hired staff</string>
    <string name="depreciation_and_impairments_of_property">Depreciation and impairments of property</string>
    <string name="depreciation_and_impairments_of_inventory_and_immaterial_assets">Depreciation and impairments of inventory and immaterial assets</string>
    <string name="interest_income">Interest income</string>
    <string name="interest_cost">Interest cost.</string>
    <string name="no_account_selected">No account selected</string>
    <string name="account_name">Account name</string>
    <string name="account_code">Account code</string>
    <string name="add_account">Add account</string>
    <string name="click_to_add_a_receipt_account">Click to add a receipt account</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="enable_gps_message">Your GPS is disabled, do you want to enable it?</string>
    <string name="enable_gps_title">Enable GPS?</string>
    <string name="click_to_add_receipt">Click to add receipt</string>
    <string name="click_to_search_receipts">Click to search receipts</string>
    <string name="click_to_view_settings">Click to view settings</string>
    <string name="last_receipt">Last receipt</string>
    <string name="menu">Menu</string>
    <string name="send_to">Send to</string>
    <string name="receipt_account">Receipt account</string>
    <string name="category">Category</string>
    <string name="select_receipt_account">Select receipt account</string>
    <string name="default_accounts">Default accounts</string>
    <string name="default_accounts_on_off">Default accounts on/off</string>

    <string name="property_assets">Property assets</string>    
    <string name="turnover_assets">Turnover assets</string>     
    <string name="funds">Funds</string>    
    <string name="debts">Debts</string>    
    <string name="income">Income</string>    
    <string name="costs">Costs</string>    
    <string name="depreciation">Depreciation and impairments</string>    
    <string name="none">None</string>    
    <string name="click_to_view_results">Click to view results</string>    
    <string name="sub_total">Sub total</string>    
    <string name="total">Total</string>    
    <string name="select_a_category_for_details">Select a category for details</string>    
    <string name="select_an_account_for_details">Select an account for details</string>    
    <string name="sound_on_off">Sound on/off</string>    
    <string name="sound">Sound</string>    
    <string name="general">General</string>    
    

</resources>