<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroller"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <LinearLayout
        style="@style/mainContainerPadding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".AddReceiptFragment" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/receipt_photo_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image_of_the_receipt" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <ImageButton
                        android:id="@+id/camera_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/click_to_take_a_picture_of_the_receipt"
                        android:src="@android:drawable/ic_menu_camera" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/take_photo" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="6dp" >

                    <ImageButton
                        android:id="@+id/timestamp_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/click_to_take_a_picture_of_the_receipt"
                        android:src="@android:drawable/ic_menu_my_calendar" />

                    <TextView
                        android:id="@+id/add_receipt_timestamp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:lines="1" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/receipt" />

        <EditText
            android:id="@+id/add_receipt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text"
            android:lines="1" />

        <EditText
            android:id="@+id/add_receipt_sum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/total_sum"
            android:inputType="numberDecimal"
            android:lines="1" />

        <EditText
            android:id="@+id/add_receipt_tax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tax"
            android:inputType="numberDecimal"
            android:lines="1" />

        <EditText
            android:id="@+id/add_receipt_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/receipt_comment_"
            android:inputType="textMultiLine"
            android:lines="3" />

        <TextView
            android:id="@+id/add_receipt_account_label"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/account" />

        <LinearLayout
            android:id="@+id/add_receipt_account_spinner_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/add_receipt_account_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_input_add"
                android:contentDescription="@string/click_to_add_a_receipt_account" />

            <Spinner
                android:id="@+id/add_receipt_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical" />
        </LinearLayout>

        <TextView
            android:id="@+id/map_container_label"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/location" />

        <!--
             The margins on the TextView's cannot be extracted to styles since the listSepartorStyle is not extendable,
             a workaround could be to create the listSeparatorStyle as my own style but I like to keep it at system setting.
             See this bug report for more information: http://code.google.com/p/android/issues/detail?id=18659
        -->

        <FrameLayout
            android:id="@+id/map_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </FrameLayout>
    </LinearLayout>

</ScrollView>