<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/account_add_container"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <TextView
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/details" />

    <EditText
        android:id="@+id/account_add_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/account_code"
        android:inputType="number" />

    <EditText
        android:id="@+id/account_add_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/account_name"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1" />

    <TextView
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category" />

    <Spinner
        android:id="@+id/category_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="24dp" >

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="?android:attr/dividerVertical" />

        <View
            android:id="@+id/vertical_divider"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:background="?android:attr/dividerVertical" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/vertical_divider"
            android:background="?android:attr/selectableItemBackground"
            android:text="@android:string/cancel" />

        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignLeft="@+id/vertical_divider"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/add" />
    </RelativeLayout>

</LinearLayout>